--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9466,7 +9466,7 @@ th.hide-for-touch {
   box-shadow: inset 0 -3px 0 0 #4fbdbe;
 }
 /* line 55, ../scss/app.scss */
-.topbar nav .top-bar-section ul li:hover a, .topbar nav .top-bar-section ul li.active a, .topbar nav .top-bar-section ul li a:focus {
+.topbar nav .top-bar-section ul li:hover a, .topbar nav .top-bar-section ul li.active a {
   box-shadow: inset 0 -3px 0 0 #ee3b24;
 }
 /* line 59, ../scss/app.scss */
