--- a/scss/app.scss
+++ b/scss/app.scss
@@ -142,6 +142,7 @@ footer {
 	padding:.5rem 1rem;
 	border:1px solid $iron;
 	display:none;
+	z-index:99999;
 	.ui-datepicker-next {
 		float:right;
 	}
