filter static pos

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -194,10 +194,10 @@ footer {
 	margin-top:rem-calc(20);
 }
 
-[data-magellan-expedition], [data-magellan-expedition-clone] {
-	min-width: initial;
-}
-div[data-magellan-expedition="fixed"].fixed {
-	left: auto;
-	max-width:320px;
-}
+// [data-magellan-expedition], [data-magellan-expedition-clone] {
+// 	min-width: initial;
+// }
+// div[data-magellan-expedition="fixed"].fixed {
+// 	left: auto;
+// 	max-width:320px;
+// }
