--- a/scss/app.scss
+++ b/scss/app.scss
@@ -189,11 +189,11 @@ footer {
 	}
 }
 
-#key1_flexselect {
+#keyword-0_flexselect {
 	border-color:$primary-color;
 }
 
-#key2_flexselect {
+#keyword-1_flexselect {
 	border-color:$red-dark;
 }
 
