--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9616,12 +9616,12 @@ footer {
 }
 
 /* line 192, ../scss/app.scss */
-#key1_flexselect {
+#keyword-0_flexselect {
   border-color: #4fbdbe;
 }
 
 /* line 196, ../scss/app.scss */
-#key2_flexselect {
+#keyword-1_flexselect {
   border-color: #a52723;
 }
 
