--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -97,7 +97,7 @@ body {
 
 /* line 438, ../bower_components/foundation/scss/foundation/components/_global.scss */
 body {
-  background: #3b9e9f;
+  background: #6dc8c9;
   color: #222;
   cursor: auto;
   font-family: "Open Sans", sans-serif;
@@ -1784,8 +1784,8 @@ select {
 }
 /* line 121, ../bower_components/foundation/scss/foundation/components/_alert-boxes.scss */
 .alert-box.alert {
-  background-color: #f04124;
-  border-color: #de2d0f;
+  background-color: #ee3b24;
+  border-color: #db2811;
   color: #FFFFFF;
 }
 /* line 122, ../bower_components/foundation/scss/foundation/components/_alert-boxes.scss */
@@ -2481,13 +2481,13 @@ button.success:hover, button.success:focus, .button.success:hover, .button.succe
 }
 /* line 222, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.alert, .button.alert {
-  background-color: #f04124;
-  border-color: #cf2a0e;
+  background-color: #ee3b24;
+  border-color: #cb2510;
   color: #FFFFFF;
 }
 /* line 158, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
-  background-color: #cf2a0e;
+  background-color: #cb2510;
 }
 /* line 164, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
@@ -2625,8 +2625,8 @@ button.disabled.success:hover, button.disabled.success:focus, button[disabled].s
 }
 /* line 240, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[disabled].alert {
-  background-color: #f04124;
-  border-color: #cf2a0e;
+  background-color: #ee3b24;
+  border-color: #cb2510;
   color: #FFFFFF;
   box-shadow: none;
   cursor: default;
@@ -2634,7 +2634,7 @@ button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[d
 }
 /* line 158, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
-  background-color: #cf2a0e;
+  background-color: #cb2510;
 }
 /* line 164, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
@@ -2642,7 +2642,7 @@ button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert
 }
 /* line 175, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
-  background-color: #f04124;
+  background-color: #ee3b24;
 }
 /* line 241, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 button.disabled.warning, button[disabled].warning, .button.disabled.warning, .button[disabled].warning {
@@ -4401,7 +4401,7 @@ fieldset legend {
   margin-bottom: 1rem;
   margin-top: -1px;
   padding: 0.375rem 0.5625rem 0.5625rem;
-  background: #f04124;
+  background: #ee3b24;
   color: #FFFFFF;
 }
 /* line 556, ../bower_components/foundation/scss/foundation/components/_forms.scss */
@@ -4418,7 +4418,7 @@ span.error, small.error {
   margin-bottom: 1rem;
   margin-top: -1px;
   padding: 0.375rem 0.5625rem 0.5625rem;
-  background: #f04124;
+  background: #ee3b24;
   color: #FFFFFF;
 }
 
@@ -4436,7 +4436,7 @@ span.error, small.error {
 /* line 575, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 .error label,
 .error label.error {
-  color: #f04124;
+  color: #ee3b24;
 }
 /* line 580, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 .error small.error {
@@ -4447,7 +4447,7 @@ span.error, small.error {
   margin-bottom: 1rem;
   margin-top: -1px;
   padding: 0.375rem 0.5625rem 0.5625rem;
-  background: #f04124;
+  background: #ee3b24;
   color: #FFFFFF;
 }
 /* line 585, ../bower_components/foundation/scss/foundation/components/_forms.scss */
@@ -4475,7 +4475,7 @@ select.error {
 
 /* line 607, ../bower_components/foundation/scss/foundation/components/_forms.scss */
 label.error {
-  color: #f04124;
+  color: #ee3b24;
 }
 
 /* line 347, ../bower_components/foundation/scss/foundation/components/_icon-bar.scss */
@@ -5176,7 +5176,7 @@ kbd {
 }
 /* line 99, ../bower_components/foundation/scss/foundation/components/_labels.scss */
 .label.alert {
-  background-color: #f04124;
+  background-color: #ee3b24;
   color: #FFFFFF;
 }
 /* line 100, ../bower_components/foundation/scss/foundation/components/_labels.scss */
@@ -5789,7 +5789,7 @@ ul.pagination li {
 }
 /* line 66, ../bower_components/foundation/scss/foundation/components/_progress-bars.scss */
 .progress.alert .meter {
-  background: #f04124;
+  background: #ee3b24;
   display: block;
   height: 100%;
 }
@@ -6829,7 +6829,7 @@ meta.foundation-mq-topbar {
 /* line 119, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .contain-to-grid {
   width: 100%;
-  background: #3b9e9f;
+  background: #6dc8c9;
 }
 /* line 123, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .contain-to-grid .top-bar {
@@ -6865,7 +6865,7 @@ meta.foundation-mq-topbar {
 
 /* line 156, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar {
-  background: #3b9e9f;
+  background: #6dc8c9;
   height: 4.375rem;
   line-height: 4.375rem;
   margin-bottom: 0;
@@ -6928,7 +6928,7 @@ meta.foundation-mq-topbar {
 }
 /* line 219, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar .name h1 a, .top-bar .name h2 a, .top-bar .name h3 a, .top-bar .name h4 a, .top-bar .name p a, .top-bar .name span a {
-  color: #bfe7e7;
+  color: #e4f5f5;
   display: block;
   font-weight: normal;
   padding: 0 1.45833rem;
@@ -6942,7 +6942,7 @@ meta.foundation-mq-topbar {
 }
 /* line 235, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar .toggle-topbar a {
-  color: #bfe7e7;
+  color: #e4f5f5;
   display: block;
   font-size: 0.8125rem;
   font-weight: bold;
@@ -6988,7 +6988,7 @@ meta.foundation-mq-topbar {
 }
 /* line 272, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar.expanded .title-area {
-  background: #3b9e9f;
+  background: #6dc8c9;
 }
 /* line 277, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar.expanded .toggle-topbar a {
@@ -7029,18 +7029,18 @@ meta.foundation-mq-topbar {
 /* line 323, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .divider,
 .top-bar-section [role="separator"] {
-  border-top: solid 1px #1d4f50;
+  border-top: solid 1px #2a7071;
   clear: both;
   height: 1px;
   width: 100%;
 }
 /* line 331, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li {
-  background: #3b9e9f;
+  background: #6dc8c9;
 }
 /* line 334, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > a {
-  color: #bfe7e7;
+  color: #e4f5f5;
   display: block;
   font-family: "Grotesque MT Std", serif;
   font-size: 1rem;
@@ -7097,13 +7097,13 @@ meta.foundation-mq-topbar {
 }
 /* line 354, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > a.button.alert {
-  background-color: #f04124;
-  border-color: #cf2a0e;
+  background-color: #ee3b24;
+  border-color: #cb2510;
   color: #FFFFFF;
 }
 /* line 158, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 .top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
-  background-color: #cf2a0e;
+  background-color: #cb2510;
 }
 /* line 164, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 .top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
@@ -7184,13 +7184,13 @@ meta.foundation-mq-topbar {
 }
 /* line 367, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > button.alert {
-  background-color: #f04124;
-  border-color: #cf2a0e;
+  background-color: #ee3b24;
+  border-color: #cb2510;
   color: #FFFFFF;
 }
 /* line 158, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 .top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
-  background-color: #cf2a0e;
+  background-color: #cb2510;
 }
 /* line 164, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
 .top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
@@ -7318,7 +7318,7 @@ meta.foundation-mq-topbar {
 }
 /* line 458, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .dropdown li.title h5 a, .top-bar-section .dropdown li.parent-link a {
-  color: #bfe7e7;
+  color: #e4f5f5;
   display: block;
 }
 /* line 462, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
@@ -7352,7 +7352,7 @@ meta.foundation-mq-topbar {
 @media only screen and (min-width: 40.0625em) {
   /* line 492, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar {
-    background: #3b9e9f;
+    background: #6dc8c9;
     overflow: visible;
   }
   /* line 172, ../bower_components/foundation/scss/foundation/components/_global.scss */
@@ -7393,7 +7393,7 @@ meta.foundation-mq-topbar {
   }
   /* line 517, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar.expanded {
-    background: #3b9e9f;
+    background: #6dc8c9;
   }
 
   /* line 522, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
@@ -7430,7 +7430,7 @@ meta.foundation-mq-topbar {
   }
   /* line 555, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section li:not(.has-form) a:not(.button) {
-    background: #3b9e9f;
+    background: #6dc8c9;
     line-height: 4.375rem;
     padding: 0 1.45833rem;
   }
@@ -7516,22 +7516,22 @@ meta.foundation-mq-topbar {
   }
   /* line 632, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li a {
-    background: #3b9e9f;
-    color: #bfe7e7;
+    background: #6dc8c9;
+    color: #e4f5f5;
     line-height: 4.375rem;
     padding: 12px 1.45833rem;
     white-space: nowrap;
   }
   /* line 641, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button) {
-    background: #3b9e9f;
-    color: #bfe7e7;
+    background: #6dc8c9;
+    color: #e4f5f5;
   }
   /* line 646, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li:not(.has-form):not(.active):hover > a:not(.button) {
     background-color: #a52723;
     color: #FFFFFF;
-    background: #3b9e9f;
+    background: #6dc8c9;
   }
   /* line 655, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li label {
@@ -7546,7 +7546,7 @@ meta.foundation-mq-topbar {
   /* line 668, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section > ul > .divider,
   .top-bar-section > ul > [role="separator"] {
-    border-right: solid 1px #45b9ba;
+    border-right: solid 1px #80cfd0;
     border-bottom: none;
     border-top: none;
     clear: none;
@@ -7555,7 +7555,7 @@ meta.foundation-mq-topbar {
   }
   /* line 678, ../bower_components/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .has-form {
-    background: #3b9e9f;
+    background: #6dc8c9;
     height: 4.375rem;
     padding: 0 1.45833rem;
   }
@@ -9449,21 +9449,21 @@ th.hide-for-touch {
 }
 /* line 42, ../scss/app.scss */
 .bg-wrapper {
-  background: #EEEEEE;
+  background: #EFEFEF;
 }
 
 /* line 46, ../scss/app.scss */
 .topbar {
-  background: #3b9e9f;
-  box-shadow: inset 0 -3px 0 0 #4fbdbe;
+  background: #6dc8c9;
+  box-shadow: inset 0 -3px 0 0 #99d9da;
 }
 /* line 49, ../scss/app.scss */
 .topbar nav {
-  box-shadow: inset 0 -3px 0 0 #4fbdbe;
+  box-shadow: inset 0 -3px 0 0 #99d9da;
 }
 /* line 52, ../scss/app.scss */
 .topbar nav .top-bar-section ul li a {
-  box-shadow: inset 0 -3px 0 0 #4fbdbe;
+  box-shadow: inset 0 -3px 0 0 #99d9da;
 }
 /* line 55, ../scss/app.scss */
 .topbar nav .top-bar-section ul li:hover a, .topbar nav .top-bar-section ul li.active a {
@@ -9496,7 +9496,7 @@ th.hide-for-touch {
   overflow: hidden;
 }
 /* line 86, ../scss/app.scss */
-.panel.dashboard h6 {
+.panel.dashboard h5 {
   margin-top: -1.25rem;
   margin-left: -1.25rem;
   margin-right: -1.25rem;
@@ -9504,7 +9504,7 @@ th.hide-for-touch {
   color: #3b9e9f;
 }
 /* line 95, ../scss/app.scss */
-.panel.filters h6 {
+.panel.filters h5 {
   background: #333333;
   color: #FFFFFF;
 }
@@ -9527,36 +9527,36 @@ th.hide-for-touch {
 .panel.number small {
   font-size: .8rem;
 }
-/* line 115, ../scss/app.scss */
+/* line 118, ../scss/app.scss */
 .panel#tweets {
   background: #55acee;
 }
-/* line 118, ../scss/app.scss */
+/* line 121, ../scss/app.scss */
 .panel#retweets {
   background: #147bc9;
 }
-/* line 121, ../scss/app.scss */
+/* line 124, ../scss/app.scss */
 .panel#mentions {
   background: #4fbdbe;
 }
-/* line 124, ../scss/app.scss */
+/* line 127, ../scss/app.scss */
 .panel#users {
   background: #a52723;
 }
-/* line 127, ../scss/app.scss */
+/* line 130, ../scss/app.scss */
 .panel .fa {
   margin-right: 5px;
   color: #ee3b24;
 }
 
-/* line 133, ../scss/app.scss */
+/* line 136, ../scss/app.scss */
 footer {
-  background: #3b9e9f;
+  background: #6dc8c9;
   color: #FFFFFF;
   padding: 1.25rem;
 }
 
-/* line 140, ../scss/app.scss */
+/* line 143, ../scss/app.scss */
 #ui-datepicker-div {
   background: #FFFFFF;
   padding: .5rem 1rem;
@@ -9564,17 +9564,17 @@ footer {
   display: none;
   z-index: 99999;
 }
-/* line 146, ../scss/app.scss */
+/* line 149, ../scss/app.scss */
 #ui-datepicker-div .ui-datepicker-next {
   float: right;
 }
-/* line 149, ../scss/app.scss */
+/* line 152, ../scss/app.scss */
 #ui-datepicker-div .ui-datepicker-month {
   width: 83%;
   display: block;
   float: left;
 }
-/* line 154, ../scss/app.scss */
+/* line 157, ../scss/app.scss */
 #ui-datepicker-div .ui-datepicker-year {
   display: block;
   float: right;
@@ -9583,49 +9583,161 @@ footer {
   line-height: 2.3125rem;
   text-align: right;
 }
-/* line 162, ../scss/app.scss */
+/* line 165, ../scss/app.scss */
 #ui-datepicker-div td {
   text-align: center;
   padding: 0;
 }
-/* line 165, ../scss/app.scss */
+/* line 168, ../scss/app.scss */
 #ui-datepicker-div td span {
   display: block;
   padding: 0.5625rem 0.625rem;
 }
-/* line 169, ../scss/app.scss */
+/* line 172, ../scss/app.scss */
 #ui-datepicker-div td a {
   display: block;
   padding: 0.5625rem 0.625rem;
 }
-/* line 172, ../scss/app.scss */
+/* line 175, ../scss/app.scss */
 #ui-datepicker-div td a:hover {
   background: #e4f5f5;
 }
-/* line 178, ../scss/app.scss */
+/* line 181, ../scss/app.scss */
 #ui-datepicker-div .ui-datepicker-current-day a {
   background: #bfe7e7;
 }
-/* line 182, ../scss/app.scss */
+/* line 185, ../scss/app.scss */
 #ui-datepicker-div .ui-datepicker-unselectable {
   color: #CCCCCC;
 }
-/* line 186, ../scss/app.scss */
+/* line 189, ../scss/app.scss */
 #ui-datepicker-div .ui-datepicker-today a {
   border: 1px solid #CCCCCC;
 }
 
-/* line 192, ../scss/app.scss */
+/* line 195, ../scss/app.scss */
 #keyword-0_flexselect {
   border-color: #4fbdbe;
 }
 
-/* line 196, ../scss/app.scss */
+/* line 199, ../scss/app.scss */
 #keyword-1_flexselect {
   border-color: #a52723;
 }
 
-/* line 201, ../scss/app.scss */
+/* line 205, ../scss/app.scss */
+.datastream button {
+  margin-bottom: 0;
+  font-size: .8rem;
+}
+/* line 208, ../scss/app.scss */
+.datastream button .fa {
+  color: #fff;
+}
+/* line 212, ../scss/app.scss */
+.datastream h1 {
+  font-size: 1.8rem;
+  margin: .6rem 0;
+}
+/* line 217, ../scss/app.scss */
+.datastream .hl:hover {
+  background: #EEEEEE;
+}
+/* line 220, ../scss/app.scss */
+.datastream .hl input, .datastream .hl select, .datastream .hl label {
+  margin-top: .35rem;
+  margin-bottom: .35rem;
+}
+/* line 226, ../scss/app.scss */
+.datastream input.header-input {
+  font-size: 1.8rem;
+  height: auto;
+}
+/* line 230, ../scss/app.scss */
+.datastream input[type=checkbox] {
+  height: 2.3125rem;
+  float: left;
+}
+/* line 233, ../scss/app.scss */
+.datastream input[type=checkbox] + label {
+  height: 2.3125rem;
+  line-height: 2.3125rem;
+}
+/* line 239, ../scss/app.scss */
+.datastream table {
+  width: 100%;
+}
+/* line 241, ../scss/app.scss */
+.datastream table td {
+  width: 33.3333333%;
+}
+/* line 244, ../scss/app.scss */
+.datastream table input, .datastream table select, .datastream table label {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* line 249, ../scss/app.scss */
+.datastream #save {
+  margin-top: 1rem;
+}
+
+/* line 254, ../scss/app.scss */
+.alert-box {
+  background: #99d9da;
+  padding: 1.25rem;
+}
+/* line 257, ../scss/app.scss */
+.alert-box h3 {
+  color: #fff;
+}
+/* line 260, ../scss/app.scss */
+.alert-box.nopadding {
+  padding: 0;
+  margin: 0;
+}
+/* line 264, ../scss/app.scss */
+.alert-box .close {
+  position: relative;
+  opacity: 1;
+  right: auto;
+  margin-top: 0;
+  top: auto;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-radius: 0;
+  border-style: solid;
+  border-width: 0;
+  cursor: pointer;
+  font-family: "Open Sans", sans-serif;
+  font-weight: normal;
+  line-height: normal;
+  margin: 0 0 1.25rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  padding: 1rem 2rem 1.0625rem 2rem;
+  font-size: 1rem;
+  background-color: #4fbdbe;
+  border-color: #3a9c9d;
+  color: #FFFFFF;
+  transition: background-color 300ms ease-out;
+  font-size: .8rem;
+}
+/* line 158, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
+.alert-box .close:hover, .alert-box .close:focus {
+  background-color: #3a9c9d;
+}
+/* line 164, ../bower_components/foundation/scss/foundation/components/_buttons.scss */
+.alert-box .close:hover, .alert-box .close:focus {
+  color: #FFFFFF;
+}
+/* line 272, ../scss/app.scss */
+.alert-box .close:hover {
+  opacity: 1;
+}
+
+/* line 279, ../scss/app.scss */
 .margin-top {
   margin-top: 1.25rem;
 }
